# yarnberry2nix

./: .gitignore  Cargo.nix  Cargo.toml  Makefile  README.md  flake.nix  result-bin  toolchain.toml
src/: main.rs
src/config/: README.md  main.rs  mod.rs
src/config/app/: main.rs
src/yarnberry/: README.md  mod.rs  package.json  structs.rs  tests.rs
src/yarnberry/package_json/: interfaces.rs  mod.rs  structs.rs  tests.rs
src/yarnberry/yarn_lock/: interfaces.rs  mod.rs  structs.rs  tests.rs
