[package]
name = "yarnberry2nix"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
fs_extra = "1.3.0"
indicatif = "0.17.9"
lazy_static = "1.5.0"
log = "0.4.22"
petgraph = "0.6.5"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
semver = "1.0.23"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
tempdir = "0.3.7"
tera = "1.20.0"
thiserror = "2.0.3"
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v4"] }
walkdir = "2.5.0"
